<resources>
    <string name="app_name">Speech Remedy</string>
    <string name="login_activity">Login</string>
    <string name="view_child_list">View Child List</string>
    <string name="create_new_child">Create New Child</string>
    <string name="therapist_menu">Therapist Menu</string>
    <string name="second_name">Second Name:</string>
    <string name="first_name">First Name:</string>
    <string name="saved">child saved</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>

    <string name="kws_caption">To start demonstration say \"recording on\".</string>
    <string name="menu_caption">Say \"digits\" or \"words\".</string>
    <string name="digits_caption">To try recognition of digits: say something like \"one two three four five\".</string>
    <string name="text_caption">To try recognition of words: \"say something like telephone\".</string>
    <string name="create_child_screen">Create Child</string>
    <string name="speech_activity">Speech</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="play_game_two">Play Game Two</string>
    <string name="play_game_three">Play Game Three</string>
    <string name="play_game_one">Play Game One</string>
    <string name="game_menu">Game Menu</string>
    <string name="play_game">Play Game!</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="welcome">Welcome back</string>
    <string name="login_therapist">Login Therapist</string>
    <string name="login_child">Login Child</string>
    <string name="home_activity">Home</string>
    <string name="confirm_password">Confirm password</string>
    <string name="child_list">Child List</string>
    <string name="Add">add</string>
    <string name="name">Word:</string>
    <string name="textview">textview</string>
    <string name="child_details">Child Details</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_closed">Close navigation drawer</string>
    <string name="action_add">action add</string>
    <string name="title_activity_maps">Map</string>
    <string name="start_loc_updates">Start Location Updates</string>
    <string name="stop_loc_updates">Stop Location Updates</string>
    <string name="connection_failed">Connection failed. Is location enabled?</string>
    <string name="share_message1">Here is the Child that you are emailing:</string>
    <string name="share_message2">Thanks for sharing!</string>
    <string name="sign_in">Sign in</string>
    <string name="gliding_of_liquids">Gliding of Liquids:</string>

    <string-array name="intent_email">
        <item>brian.coveney@mycit.ie</item>
        <item>coveneybrian@gmail.com</item>
        <item>Ignacio.Castineiras@cit.ie</item>
    </string-array>

    <!-- Navigation Drawer Text and Icons -->
    <string-array name="menu_items">
        <item>Home</item>
        <item>Settings</item>
        <item>Google Map</item>
    </string-array>
    <string-array name="menu_icons">
        <item>@drawable/ic_home_24dp</item>
        <item>@drawable/ic_settings_applications_24dp</item>
        <item>@drawable/ic_add_24dp</item>
    </string-array>
</resources>
